# gist

./: .gitignore  AGENTS.md  CREDITS.md  DATA_LIFECYCLE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gist-sidecar.spec  package-lock.json  package.json  pyproject.toml  run_sidecar.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/counselor-sidecar/_internal/av-18.0.0.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/av/.dylibs/: libSvtAv1Enc.4.1.0.dylib  libavdevice.62.3.102.dylib  libavfilter.11.14.102.dylib  libavformat.62.12.102.dylib  libavutil.60.26.102.dylib  libdav1d.7.dylib  libmp3lame.0.dylib  libopencore-amrnb.0.dylib  libopencore-amrwb.0.dylib  libopus.0.dylib  libsharpyuv.0.1.2.dylib  libswresample.6.3.102.dylib  libswscale.9.5.102.dylib  libvpx.12.dylib  libwebp.7.2.0.dylib  libwebpmux.3.1.2.dylib  libx264.165.dylib
src-tauri/resources/counselor-sidecar/_internal/ctranslate2-4.8.1.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/faster_whisper-1.2.1.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/filelock-3.29.5.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/huggingface_hub-1.22.0.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/mlx-0.31.2.dist-info/: METADATA  RECORD
src-tauri/resources/counselor-sidecar/_internal/mlx/core/: __init__.pyi  cuda.pyi  fast.pyi  (+5 more)
src-tauri/resources/counselor-sidecar/_internal/mlx_lm-0.31.3.dist-info/: METADATA  RECORD  entry_points.txt
src-tauri/resources/counselor-sidecar/_internal/mlx_metal-0.31.2.dist-info/: METADATA  RECORD  WHEEL
src-tauri/resources/counselor-sidecar/_internal/numpy-2.4.6.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/protobuf-7.35.1.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/regex-2026.6.28.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/safetensors-0.8.0.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/scikit_learn-1.9.0.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/scipy-1.18.0.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/sentencepiece-0.2.1.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/tokenizers-0.22.2.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/tqdm-4.68.3.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/transformers-5.13.0.dist-info/: RECORD
src-tauri/resources/counselor-sidecar/_internal/typer-0.26.8.dist-info/: RECORD
src-tauri/src/: data_management.rs  lib.rs  main.rs
src-tauri/src/audio/: core_audio_tap.rs  devices.rs  mic_capture.rs  mixer.rs  mod.rs  permissions.rs  recorder.rs  resampler.rs  wav_writer.rs
(+103 files in other folders)
