[project]
name = "gist"
version = "0.1.0"
description = "Local-first therapy session transcription and clinical note generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "mlx-lm>=0.31.0",
    "transformers>=5.0.0,<5.13.0",
    "huggingface-hub>=0.20.0",
    "tqdm>=4.60.0",
    "mlx-audio[stt]>=0.4.4",
    "cffi<2",  # mlx-audio's transitive cffi 2.x breaks against bundled llvm
    "miniaudio>=1.59",
    "pyannote-audio>=4.0.0,<5",
]

[project.scripts]
gist = "gist.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gist"]


[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
