[package]
name = "gist"
version = "0.1.4"
description = "Local-first therapy session tool"
authors = ["you"]
edition = "2021"

[lib]
name = "gist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
libc = "=0.2.186"

# Audio recording
cpal = "0.15.3"
ringbuf = "0.4"
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { git = "https://github.com/yury/cidre", rev = "a9587fa", features = ["av"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSButton", "NSStatusBarButton", "NSStatusItem"] }

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }
